--- a/package.json
+++ b/package.json
@@ -8,10 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue2vis/network": "^1.0.1-alpha.78",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "diagram-vue": "^0.3.3",
+    "gojs-vue": "^1.0.1",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
+    "vis-data": "^7.1.1",
+    "vis-network": "^8.5.4",
+    "vis-util": "^4.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-vis-network": "^1.0.2",
+    "vue-visjs": "^0.4.1",
+    "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -26,6 +37,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.8",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
